[gd_scene load_steps=10 format=3 uid="uid://8kq0xrdwg7tg"]

[ext_resource type="Script" uid="uid://rksw2s3x3xlh" path="res://scenes/test/test_world.gd" id="1_k3yvu"]
[ext_resource type="PackedScene" uid="uid://dg4h5aptq65se" path="res://scenes/ui/labels/currency_label.tscn" id="2_k3yvu"]
[ext_resource type="Resource" uid="uid://derm2k5fukhlw" path="res://game_data/dialogue/conversation/intro_converstaion.tres" id="2_mbqn5"]
[ext_resource type="PackedScene" uid="uid://cqjm2iv5ibos" path="res://scenes/ui/buttons/currency_button.tscn" id="2_mpk58"]
[ext_resource type="Script" uid="uid://ibattlbh7e1t" path="res://core/resources/levelable_upgrade.gd" id="4_fddy8"]
[ext_resource type="PackedScene" uid="uid://7kksc1qvtwyv" path="res://scenes/ui/buttons/shop_trigger.tscn" id="5_fddy8"]
[ext_resource type="PackedScene" uid="uid://bymtdvkh5wiit" path="res://scenes/ui/menus/shop_panel.tscn" id="7_fddy8"]
[ext_resource type="Resource" uid="uid://dqm22xe6kirin" path="res://game_data/currencies/spirit.tres" id="7_mbqn5"]
[ext_resource type="PackedScene" uid="uid://chhrvwnrgoavo" path="res://scenes/ui/labels/chat_log.tscn" id="7_r010t"]

[node name="TestWorld" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k3yvu")
intro = ExtResource("2_mbqn5")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="MoneyButton" parent="HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_mpk58")]
layout_mode = 2
text = "Money button"

[node name="SpiritButton" parent="HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_mpk58")]
layout_mode = 2
text = "Spirit button"
currency_type = 2
contributing_upgrades = Array[ExtResource("4_fddy8")]([])

[node name="ShopTrigger" parent="HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("5_fddy8")]
layout_mode = 2

[node name="Save" type="Button" parent="HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Load" type="Button" parent="HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Load"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ShopPanel" parent="HBoxContainer/VBoxContainer/MarginContainer2" instance=ExtResource("7_fddy8")]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
show_purchased = true

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TechPanel" parent="HBoxContainer/VBoxContainer/MarginContainer3" instance=ExtResource("7_fddy8")]
layout_mode = 2
filter_by_type = 1
show_locked = true
show_purchased = true

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 6

[node name="MoneyLabel" parent="HBoxContainer/VBoxContainer2" instance=ExtResource("2_k3yvu")]
layout_mode = 2

[node name="SpiritLabel" parent="HBoxContainer/VBoxContainer2" instance=ExtResource("2_k3yvu")]
layout_mode = 2
monitored_currency = ExtResource("7_mbqn5")

[node name="ChatLog" parent="HBoxContainer" instance=ExtResource("7_r010t")]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/Load" to="." method="_on_load_pressed"]
